Reworking of the discussion into results.

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -5,5 +5,5 @@ Abstract goes here.
 \end{abstract}
 
 \begin{IEEEkeywords}
-keyword; 
+Blockchain technology, decentralized database, shared governance, provenance, auditability, resilience.
 \end{IEEEkeywords}
