Minor tweaks to intro

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -46,7 +46,7 @@
 
 	\IEEEauthorblockN{Robert Cunningham}
 	\IEEEauthorblockA{
-		Carnagie Mellon University\\
+		Carnegie Mellon University\\
 		Software Engineering Institute\\
 		MIT Lincoln Laboratory\\
 		%\textit{}
