--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -4,24 +4,24 @@
 In 1982, David Chaum~\cite{Cha82} proposed using blind signatures to allow for untraceable payments.
 Later, Chaum et al.~\cite{chaum1988untraceable} expanded this idea into a fully fleshed out system, eCash.
 eCash was the first cryptocurrency---i.e., ``a digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds operating independently of a [nation-state-controlled] central bank.''\footnote{\url{https://en.oxforddictionaries.com/definition/cryptocurrency}}
-Early cryptocurrencies still required the presence of a central party to help manage the creation and transfer of funds.
+However, early cryptocurrencies still required the presence of a central party to help manage the creation and transfer of funds.
 
 In 2008, an author using the pseudonym Satoshi Nakamoto~\cite{Nak08} proposed Bitcoin.
-Unlike centralized cryptocurrencies which rely on a set of known entities to run the cryptocurrency, Bitcoin uses a proof-of-work-based scheme~\cite{DN93,back1997partial} to allow the general public to maintain the system.
-To incentivize public participation, Bitcoin pays participants (known as miners) for solving the proof-of-work puzzles.
+Unlike the earlier centralized cryptocurrencies which rely on a set of known entities to run the cryptocurrency, Bitcoin uses a proof-of-work-based scheme~\cite{DN93,back1997partial} to allow the general public to maintain the system.
+To incentivize public participation, Bitcoin pays participants (known as miners) for solving computationally hard problems known as proof-of-work puzzles.
 While Bitcoin's building blocks were not novel, the composition of these properties into a single system was a meaningful contribution~\cite{Narayanan17} that led to the first cryptocurrency to see wide-spread popularity and usage.
 
 At the peak of its popularity, Bitcoin's market capitalization reached \$835.69 billion (USD), though at the time of this writing it has seen a decrease in both its stature and market capitalization (\$125.83 billion).
-Nevertheless, there remains interest interest in the question of whether the technology underlying Bitcoin---known as \emph{Blockchain technology} or {Blockchain} for short---could be used to build other interesting cryptocurrencies or distributed systems.
-In particular, we have heard researchers, businesses, and governments repeatedly ask the following four questions related to Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, (3) how does it compare to other approaches (e.g., distributed databases), (4) what are reasonable applications for Blockchain technology.
+Nevertheless, there remains significant interest in the question of whether the technology underlying Bitcoin---known as \emph{Blockchain technology} or {Blockchain} for short---could be used to build other interesting cryptocurrencies or distributed systems.
+In particular, we have heard researchers, businesses, and governments repeatedly ask the following four questions related to Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, (3) how does it compare to other approaches (e.g., distributed databases), (4) what are good applications for Blockchain technology.
 
-To answer these questions, its insufficient to consider academic sources alone.
+To answer these questions, it is insufficient to consider academic sources alone.
 While there have been several academic overviews written in this space, they have not addressed these general question regarding Blockchain technology, but rather surveyed particular systems or technical properties: Bitcoin~\cite{BMC+15,Narayanan17}, payment privacy~\cite{Conti17}, security and performance~\cite{Gervais16}, scalability~\cite{Croman16}, and consensus protocols~\cite{Bano17,garay2018consensus}.
 In contrast, there has been significant work from the industrial sector (hereafter referred to as \emph{industry}) attempting to answers the questions as they search for applications and new product offerings that could be enabled by Blockchain technology.
 Unfortunately, much of this work is fueled by hype and lacks the peer-review process and rigor expected of academic literature.
 
-To address these limitations in literature produced by industry, we leveraged grounded theory~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method) to analyze the corpus of work produced by industry (see \S\ref{sec:method}).
-This allowed us to extract the valuable technical insights from the hype and technical misunderstanding that permeates this body of work.
+To address these limitations in the literature produced by industry, we leveraged grounded theory~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method) to analyze this corpus of industry literature (see \S\ref{sec:method}).
+This allowed us to extract the valuable technical insights from the hype and technical misunderstandings that permeate this body of work.
 Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, this work answers the four questions commonly asked in relation to Blockchain technology.
 
 While the individual results of this work might not be surprising, taken together they represent the most complete overview of Blockchain technology and its use cases available in the academic literature.
@@ -31,7 +31,7 @@ More concretely, our key contributions are,
 	\item \textbf{Defining the key technical features of Blockchain technology.}
 	Based on the results of our analysis we identify three key properties for Blockchain technology: shared governance and operation, an append-only ledger, and replication.
 	Blockchain systems are both governed and operated by a distributed collection of entities that individually and collectively ensure that all operations are valid.
-	These operations are recovered in an append-only ledger that provides full-system provenance.
+	These operations are recorded in an append-only ledger that provides full-system provenance.
 	This ledger is also replicated by all governing parties providing resilience against data loss and malicious modification of data.
 	We also discuss other related technical properties that enabled Blockchain's various capabilities.
 	
