Finished editing the challenges sections.

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -51,5 +51,8 @@ More concretely, our key contributions are,
 	\item \textbf{Identify the applications that could benefit from the use of Blockchain technology.}
 	
 	\item \textbf{Detailing open research questions in the area of Blockchain technology.}
+	As part of our review of the literature, both industry and academic, we identified several important challenges and limitations for Blockchain technology.
+	Several of these are important research questions with interesting potential for future research: scalability, smart contract correctness and dispute resolution, stapling of on-chain tokens to off-chain assets, key management, and regulation.
+	We survey these topics and describe the research that has been done into each of these areas.
 	
 \end{enumerate}
