--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -167,7 +167,7 @@ In particular, we considered with three resiliency properties---(1) is it resili
 Systems with centralized governance are only able to detect malicious updates as the monitors can detect the attack but cannot prevent the malicious update from being replicated.
 If we modify the system to allow monitors to play this role, they have become consensus partners and we now have a decentralized database.
 
-\subsection{Lessons Learned}
+\subsection{Lessons Learned and Discussion}
 Here we present commentary and lessons learned based on our analysis of the data from industry.
 
 \subsubsection{Is Blockchain a Good Fit for My Project?}
