--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,7 +1,10 @@
 % !TEX root = ../main.tex
 
 \begin{abstract}
-Abstract goes here. 
+In this paper we answer four common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, (3) how does it compare to other approaches (e.g., distributed databases), (4) what are good applications for Blockchain technology.
+We accomplish this goal by analyzing a large corpus of data produced by industry using grounded theory.
+This method was successfully able to help us separate the though leadership provided by industry in this space from the hype that it also peddles.
+Additionally, we identify open research questions related to Blockchain technology and discuss lessons learned from our analysis of this space.
 \end{abstract}
 
 \begin{IEEEkeywords}
