--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,9 +1,14 @@
 % !TEX root = ../main.tex
 
 \section{Conclusion}
+In this paper we answer four common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, (3) how does it compare to other approaches (e.g., distributed databases), (4) what are good applications for Blockchain technology.
+We accomplish this goal by analyzing a large corpus of data produced by industry using grounded theory.
+This method was successfully able to help us separate the though leadership provided by industry in this space from the hype that it also peddles.
 
-Many proponents of Blockchain technology believe that it has the capability to massively disrupt how society operates, or at least to rapidly overtake legacy solutions in many significant industries. This belief is hyperbole (i.e., hype) as though Blockchain technology has many valid uses, it has not, nor is it likely to achieve this Utopian vision. This ideology and hype cause problems: for example, frequent emotionally-charged schisms within Blockchain advocate and developer communities---especially those affiliated with Bitcoin. This turmoil prevents level-headed scientific discourse and wastes developer resources. It can also tangibly affect the stability of a Blockchain systems by causing a fork, in which two independent chains emerge to used and maintained by different groups, further dividing resources.
+Our results identity three key components to Blockchain technology: shared governance and operation, an append-only ledger, and replication.
+Using these and other technical primitives and principles, Blockchain technology is able to provide a range of Capabilities: auditability, full-system provenance, access control for assets, resilience to accidents and malicious entities, and smart contracts.
+We also showed how Blockchain technology relates to other distributed databases, demonstrating that it has more features than alternative systems, but is also more complex then those systems.
+For that reason, we only recommend its use when the application has the following needs: shared governance, provenance, auditability and resilience provided by Blockchain technology.
 
-With that said, Blockchain technology's disruptive power has certainly been demonstrated in the financial sector, so it clearly has promise. Several factors have made this sector an attractive target for disruption, perhaps none more so than the opportunity for massive profit. This motive has had benefits for Blockchain technology, especially in accelerating the pace of technological development. However, it has also created perverse incentives to reinforce hype and ideology. Hype can attract investors and inflate valuations, and dogmatic ideology is a proven marketing and recruitment strategy for financial scammers. These problems inhibit the advancement of Blockchain technology.
-
-
+Finally, we identified relevant applications for Blockchain technology as well as open research questions in this area.
+As Blockchain technology has significant potential, we hope this list of applications and research questions will inspire more researchers and practitioners to explore this area.
