--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -49,6 +49,9 @@ More concretely, our key contributions are,
 	As such, we recommend that applications leverage Blockchain technology only if they need the shared governance, provenance, auditability and resilience provided by Blockchain technology.
 	
 	\item \textbf{Identify the applications that could benefit from the use of Blockchain technology.}
+	We identify sixteen classes of applications for Blockchain technology.
+	We separate these into applications that are ideal for Blockchain technology, those that are suitable if Blockchain's key properties are needed, and those that are poor matches for Blockchain technology.
+	This list is intended to help both practitioners and researchers know where to focus their attention in this space.
 	
 	\item \textbf{Detailing open research questions in the area of Blockchain technology.}
 	As part of our review of the literature, both industry and academic, we identified several important challenges and limitations for Blockchain technology.
