Wordsmithing throughout.  Fixed imprecise text. Fixed some problems with indentation. Stage 4 is now numbered 4 in a list of stages. Added suggestions for changes to the images.  I can't make them--so I just wrote down what is needed.

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -1,7 +1,8 @@
 % !TEX root = ../main.tex
 
 \section{Introduction}
-\rnote{I think that we need to start with the notion of a hash chain used to establish the integrity of a set of data or perhaps a sequence of actions, given the title of the paper.  I'm not certain what the right reference is though: is it to the paper on Merkle trees?}
+\rnote{I think that we need to start with the notion of an authenticated data structure or hash chain used to establish the integrity of data, given the title of the paper.  What is the right reference?}
+
 In 1982, David Chaum~\cite{Cha82} proposed using blind signatures to allow for untraceable payments.
 Later, Chaum et al.~\cite{chaum1988untraceable} expanded this idea into a fully fleshed out system, eCash.
 eCash was the first cryptocurrency---i.e., ``a digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds operating independently of a [nation-state-controlled] central bank.''\footnote{\url{https://en.oxforddictionaries.com/definition/cryptocurrency}}
