--- a/paper/setup/packages.tex
+++ b/paper/setup/packages.tex
@@ -44,6 +44,7 @@
 %\usepackage{amstext,amssymb,amsthm}
 \usepackage{bbm}
 \usepackage{stmaryrd}
+\usepackage{amssymb}
 
 % = = = Other
 \usepackage{array}
